@@ -20,6 +20,7 @@
 Tencent changes:
 
 0.9.0-1-tencent
+  Flink-1.9: use schema visitor for paruqet writer [jimmyjchen]
   Check if there is at least 1 pending data file in close() of IcebergCommitter, to avoid commit with nothing [seanxiangli]
   Add more parameter validation and log key parameters to task manager's log [seanxiangli]
   Add Flink table source [jimmyjchen]
